@@ -113,7 +113,7 @@ public:
     virtual bool SetDisplay(SDL_Surface *dst, SDL_mutex *lock,
                                 MPEG_DisplayCallback callback) = 0;
     virtual void MoveDisplay(int x, int y) = 0;
-    virtual void ScaleDisplay(int scale) = 0;
+    virtual void ScaleDisplayXY(int w, int h) = 0;
     virtual void RenderFrame(int frame) = 0;
     virtual void RenderFinal(SDL_Surface *dst, int x, int y) = 0;
 protected:
